--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,9 +76,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: action/checkout@v3
+      - uses: actions/checkout@v3
       - name: Set up nodeJS
-        uses: action/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: 18
 
