--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -183,5 +183,5 @@ jobs:
       uses: appleboy/telegram-action@master
       with:
         to: ${{ secrets.TELEGRAM_TO }}
-        token: %{{ secrets.TELEGRAM_TOKEN }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
         message: Деплой успешно выполнен!
